--- a/Day 3/day3task.html
+++ b/Day 3/day3task.html
@@ -70,8 +70,8 @@
                         Saṅghīya Lokatāntrika Gaṇatantra Nepāla
                         Two united crimson pennants with blue <br> borders, top one containing a stylised symbol for the moon and the bottom one, the sun.
                         <td>Federal Democratic Republic  <br>
-                            <img src="../Flag_of_Nepal.svg.png" flag alt="" height="50" width="50">
-                            <img src="../Emblem_of_Nepal.svg.png" alt=""height="50" width="50">
+                            <img src="../pictures/Flag_of_Nepal.svg.png" flag alt="" height="50" width="50">
+                            <img src="../pictures/Emblem_of_Nepal.svg.png" alt=""height="50" width="50">
                             </td>
                             
                             
