--- a/Day 6/Day6task.html
+++ b/Day 6/Day6task.html
@@ -139,12 +139,12 @@
                         <div style="border-right:1px solid ;margin-right: 20px; padding: 0px 15px ;">MY BALANCE <br> <br><br>$ 3,400 </div>
                         </div>
                     
-                    <img src="/R3.jpg" alt="" height="400px" width="100%">
+                    <img src="../pictures/R3.jpg" alt="" height="400px" width="100%">
                 </div> 
             </div>
             <div>
                 <div class="Revenue"><h1 style="padding: 10px 0px;">Sales</h1> <br>
-                    <img src="../Sales-101-2.jpg" alt="" height="auto" width="400px">
+                    <img src="../pictures/Sales-101-2.jpg" height="auto" width="400px">
                 </div> <br><br>
                 <div class="Revenue"><h1 style="padding: 10px 0px;">Location</h1> <br>
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5941.160657689533!2d85.2115264455901!3d27.69766579810802!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39eb230e5479efb1%3A0xa28ed7f729030fd3!2sThankot%2C%20Chandragiri!5e0!3m2!1sen!2snp!4v1731953200263!5m2!1sen!2snp" width="400" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
