--- a/Day 7/portfolio.html
+++ b/Day 7/portfolio.html
@@ -91,7 +91,7 @@
                     </div>
                     <div class="png" style="padding: 60px; margin-right: 15%;">
                         <img
-                            src="../design_prev_ui.png"
+                            src="../pictures/design_prev_ui.png"
                             alt=""
                             height="auto"
                             width="120%"
@@ -105,61 +105,56 @@
                     <div class="projects">
                         <br>
                         <img
-                            src="../2.avif"
+                            src="../pictures/2.avif"
                             alt=""
                             height="auto"
                             width="400px"
                             style="margin-left: 100px;"
                         >
                         <img
-                            src="../9.jpg"
+                            src="../pictures/9.webp"
                             alt=""
                             height="auto"
                             width="400px"
                         >
                         <img
-                            src="../3.avif"
+                            src="../pictures/3.avif"
                             alt=""
                             height="auto"
                             width="400px"
                         >
                         <img
-                            src="../7.jpg"
+                            src="../pictures/7.jpg"
                             alt=""
                             height="auto"
                             width="400px"
                         >
                         <img
-                            src="../4.avif"
+                            src="../pictures/4.avif"
                             alt=""
                             height="auto"
                             width="400px"
                         >
                         <img
-                            src="../6.jpg"
+                            src="../pictures/6.png"
                             alt=""
                             height="auto"
                             width="400px"
                         >
                         <img
-                            src="../1.avif"
+                            src="../pictures/1.avif"
                             alt=""
                             height="auto"
                             width="400px"
             
                         >
                         <img
-                            src="../5.jpg"
+                            src="../pictures/5.jpg"
                             alt=""
                             height="auto"
                             width="400px"
                         >
-                        <img
-                            src="../8.jpg"
-                            alt=""
-                            height="auto"
-                            width="400px"
-                        >
+                      
                     </div>
                 </div>
                 <div>
