--- a/Day 7/portfolio.html
+++ b/Day 7/portfolio.html
@@ -134,6 +134,7 @@
                             alt=""
                             height="auto"
                             width="400px"
+                            style="margin-left: 100px;"
                         >
                         <img
                             src="../pictures/6.png"
