--- a/index.html
+++ b/index.html
@@ -4,16 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>karim</title>
+    <style>
+         .box{
+            padding: 60px;
+            border-radius: 20px;
+            box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+            max-width: 700px;
+            margin-left:28%;
+        }
+        .box{
+            display:flex;
+            flex-direction: column;
+            gap: 10px;
+        }
+    </style>
 </head>
 <body>
+    <div class="box">
     <h1>All Tasks</h1>
     <ol>
-        <li><a href="../Day 2/index.html">Table</a></li>
-        <li><a href="../Day 3/day3task.html">Wikipedia</a></li>
-        <li><a href="../Day 5/day5task.html">Blog</a></li>
-        <li><a href="../Day 6/Day6task.html">Dashboard</a></li>
-        <li><a href="../Day 8/day8task.html">Gallery</a></li>
+        <li><a href="../Day 2/index.html">Table</a></li> <br>
+        <li><a href="../Day 3/day3task.html">Wikipedia</a></li><br>
+        <li><a href="../Day 5/day5task.html">Blog</a></li><br>
+        <li><a href="../Day 6/Day6task.html">Dashboard</a></li><br>
+        <li><a href="../Day 8/day8task.html">Gallery</a></li><br>
         <li><a href="../Day 7/portfolio.html">Portfolio</a></li>
 </ol>
+</div>
 </body>
 </html>
