--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
     <div class="box">
     <h1>All Tasks</h1>
     <ol>
-        <li><a href="../Day 2/index.html">Table</a></li> <br>
-        <li><a href="../Day 3/day3task.html">Wikipedia</a></li><br>
-        <li><a href="../Day 5/day5task.html">Blog</a></li><br>
-        <li><a href="../Day 6/Day6task.html">Dashboard</a></li><br>
-        <li><a href="../Day 8/day8task.html">Gallery</a></li><br>
-        <li><a href="../Day 7/portfolio.html">Portfolio</a></li>
+        <li><a href="../tasks/Day 2/tabletask.html">Table</a></li> <br>
+        <li><a href="../tasks/Day 3/day3task.html">Wikipedia</a></li><br>
+        <li><a href="../tasks/Day 5/day5task.html">Blog</a></li><br>
+        <li><a href="../tasks/Day 6/Day6task.html">Dashboard</a></li><br>
+        <li><a href="../tasks/Day 8/day8task.html">Gallery</a></li><br>
+        <li><a href="../tasks/Day 7/portfolio.html">Portfolio</a></li>
 </ol>
 </div>
 </body>
